<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <GVL Name="Constant_Variables" Id="{ff0b3272-6d28-4b02-8961-a1802b01a609}">
    <Declaration><![CDATA[{attribute 'Tc2GvlVarNames'}
VAR_GLOBAL CONSTANT
	(********************
	*
	* Times
	*
	************************)

	CARRIER_RELEASE_DELAY						:TIME:= T#2S;			(*Temps de rentrée du vérin de blocage des vérins*)
	PULSE_RELEASE_JIG_OP						:TIME:= T#250MS;		(*Duration of the pulse to release a carrier on the Operators jig*)
	DELAY_EJECT_CARRIERS						:TIME:= T#5S;			(*Time for release all the carriers present in the tunel during the initialisation *)
	DELAY_START_AIR								:TIME:= T#2S;			(*Time to let air starting before starting convoyer *)

	TEMPS_VIDANGE_POMPE							:TIME:= T#2S;			(*Temps durant lequel on pompe de l'air pour vidanger la pompe*)
	TEMPS_VIDANGE_RESERVOIR						:TIME:= T#30S;			(*Temps durant lequel on continue de vider le réservoir d'eau pour être sur qu'il est vide*)
	
	TEMPS_SORTIE_VERIN							:TIME:= T#3S;			(*Temps durant lequel on pompe de l'air pour vidanger la pompe*)
	
	TEMPS_CHANGEMENT_PRESSION					:TIME:= T#4S;			(*Temps pour la mise sous pression du débit de travail avant réglage*)

	(********************
	*
	* Motor
	*
	************************)
	MOTOR_ST4_ADDRESS							:STRING:= '10.10.10.31.4.1';	(*Adresse moteur ST4*)
	MOTOR_ST5_ADDRESS							:STRING:= '10.10.10.31.5.1';	(*Adresse moteur ST5*)
	MOTOR_ST4_INITIAL_POS						:DINT:=30000;					(*Initial position of the motor*)
	MOTOR_ST4_POSITION_MAX						:DINT:=35000;					(*Butée soft du moteur*)
	MOTOR_ST5_INITIAL_POS						:DINT:=30000;					(*Initial position of the motor*)
	MOTOR_ST5_POSITION_MAX						:DINT:=35000;					(*Butée soft du moteur*)
	
	RESERVOIR_EAU_MAX							:INT:=5000;						(*Niveau haut du réservoir d'eau*)
	RESERVOIR_EAU_MIN							:INT:=14000;					(*Niveau bas du réservoir d'eau*)
	


END_VAR

VAR_GLOBAL

	(********************
	*
	* Config
	*
	************************)

	PUMP_PARAMS 									: PUMP_PARAMS;		(*Paramètre de test qu viennent depuis Labview*)

	(********************
	*
	* Activation des Posages
	*
	************************)
	ST1_JIG_DISABLED							:BOOL:=TRUE;			(*Désactive le posage*)
	ST2_JIG_DISABLED							:BOOL:=TRUE;			(*Désactive le posage*)
	ST3_JIG_DISABLED							:BOOL:=FALSE;			(*Désactive le posage*)
	ST4_5_JIG_DISABLED							:BOOL:=TRUE;			(*Désactive les posages ST4 et ST5*)
	ST4_JIG_DISABLED							:BOOL:=TRUE;			(*via la variable GRAND_DEBIT*)
	ST5_JIG_DISABLED							:BOOL:=TRUE;			(*via la variable GRAND_DEBIT*)
	ST6_JIG_DISABLED							:BOOL:=TRUE;			(*Désactive le posage*)
	ST7_JIG_DISABLED							:BOOL:=TRUE;			(*Désactive le posage*)
	ST8_JIG_DISABLED							:BOOL:=TRUE;			(*Désactive le posage*)
	ST9_JIG_DISABLED							:BOOL:=TRUE;			(*Désactive le posage*)

END_VAR
]]></Declaration>
    <ObjectProperties />
  </GVL>
</TcPlcObject>