<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <GVL Name="Flag_Variables" Id="{54eae9c1-1ce7-4cda-bc03-da1b2949b8ba}">
    <Declaration><![CDATA[{attribute 'Tc2GvlVarNames'}
VAR_GLOBAL


	FLAGS 				AT%M*: FLAGS;


	SAFETY_IN 			AT%I*: SAFETY_IN;
	SAFETY_OUT 			AT%Q*: SAFETY_OUT;

	(*Visualisation des débits ST4*)
	QMAX_ARRAY: ARRAY[1..50] OF REAL;
	INDEX_QMAX_ARRAY :INT:=1;
	Q_ARRAY: ARRAY[1..50] OF REAL;
	INDEX_Q_ARRAY :INT:=1;
	
	QMAX5_ARRAY: ARRAY[1..50] OF REAL;
	INDEX_QMAX5_ARRAY :INT:=1;
	Q5_ARRAY: ARRAY[1..50] OF REAL;
	INDEX_Q5_ARRAY :INT:=1;
	
	PRESSURE_REGULATOR_ST4: PRESSURE_REGULATOR;
	PRESSURE_REGULATOR_ST5: PRESSURE_REGULATOR;


END_VAR

]]></Declaration>
    <ObjectProperties />
  </GVL>
</TcPlcObject>